<package>

  <name>clam_moveit_config</name>
  <version>1.0.7</version>
  <description>
     clam_moveit_config
  </description>
  <author>Dave Coleman</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_robots/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_robots</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>moveit_ros_move_group</run_depend>

</package>
