<package>

  <name>r2_moveit_generated</name>
  <version>1.1.1</version>
  <description>
     r2_moveit_generated
  </description>
  <author>SEBASTIAN-GM</author>
  <maintainer email="assistant@moveit.ros.org">MoveIt Setup Assistant</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit_robots/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit_robots</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>moveit_ros_move_group</run_depend>

</package>
